[gd_scene load_steps=27 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-jump-02.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-jump-03.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-idle-00.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-idle-01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-idle-02.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-idle-03.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-00.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-02.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-03.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-04.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-run-05.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-fall-00.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Adventurer-1.5/Individual Sprites/adventurer-fall-01.png" type="Texture" id=15]
[ext_resource path="res://Sprites/BloodHD1/Sanguee1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/BloodHD1/Sanguee2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/BloodHD1/Sanguee3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/BloodHD1/Sanguee4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/BloodHD1/Sanguee5.png" type="Texture" id=20]
[ext_resource path="res://Sprites/BloodHD1/Sanguee6.png" type="Texture" id=21]
[ext_resource path="res://Sprites/BloodHD1/Sanguee7.png" type="Texture" id=22]
[ext_resource path="res://Sprites/BloodHD1/Sanguee8.png" type="Texture" id=23]
[ext_resource path="res://Sprites/BloodHD1/Sanguee9.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "Dead",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 15.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 2.30364, -42.7065 )
scale = Vector2( 3, 3 )
collision_layer = 4
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="RayD" type="RayCast2D" parent="."]
position = Vector2( -4.22334, 12.7708 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RayE" type="RayCast2D" parent="."]
position = Vector2( 4.36523, 12.5312 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RayWall" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 9 )

